--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li><strong>High-Touch, Consultative Approach</strong> – We work side by side with our clients to ensure staffing choices reflect their company culture and operational goals.</li>
                 </ul>
                 <div class="shadowbox-header">
-                    <h3>Ensure Your Business Thrives With Exceptional Talent.</h3>
+                    <h3>Ensure Your Business Thrives With Exceptional Talent</h3>
                 </div>
                 <p class="justified-text">With over 20 years of experience in staffing and recruiting, Curated Talent 
                     Collective brings unparalleled expertise to the hospitality industry. As a family-owned and woman-owned 
