--- a/about.html
+++ b/about.html
@@ -179,8 +179,8 @@
     <footer>
         <div class="footer-menu">
             <ul>
-                <li style="padding-left: 0; margin-bottom: 10px;"><a href="services.html">Services</a></li>
-                <li style="padding-left: 0; margin-bottom: 10px;"><a href="about.html">A Look Inside CTC</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="about.html">A Look Inside CTC</a></li>
             </ul>
             <div class="footer-logo">
                 <a href="index.html">
@@ -188,8 +188,8 @@
                 </a>
             </div>
             <ul>
-                <li style="padding-left: 0; margin-bottom: 10px;"><a href="blog.html">The CTC Knowledge Hub</a></li>
-                <li style="padding-left: 0; margin-bottom: 10px;"><a href="contact.html">Contact</a></li>
+                <li><a href="knowledgehub.html">The CTC Knowledge Hub</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
         <p>&copy; 2025 Curated Talent Collective. All Rights Reserved.</p>
