--- a/knowledgehub.html
+++ b/knowledgehub.html
@@ -12,7 +12,7 @@
     <main>
         <section class="info-section">
             <div class="info-content">
-                <h2>The CTC Knowledge Hub</h2>
+                <h2>The CTC knowledge Hub</h2>
                 <p class="justified-text">This is a placeholder for content related to this page. You can update this section with relevant information.</p>
                 <p class="justified-text">Use this space to expand on the details of your services, company values, leadership team, or any other topic.</p>
             </div>
@@ -35,7 +35,7 @@
                 </a>
             </div>
             <ul>
-                <li><a href="blog.html">The CTC Knowledge Hub</a></li>
+                <li><a href="knowledgehub.html">The CTC Knowledge Hub</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
