--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
                 </a>
             </div>
             <ul>
-                <li><a href="blog.html">The CTC Knowledge Hub</a></li>
+                <li><a href="knowledgehub.html">The CTC Knowledge Hub</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
