--- a/about.html
+++ b/about.html
@@ -144,30 +144,109 @@
         </section>
         <section class="info-section">
             <div class="info-content">
-                <!-- Mission Statement -->
-                <h2>Our Mission</h2>
-                <p class="justified-text">
-                    Our mission is to bridge the gap between **top-tier talent** and **luxury hospitality brands**, ensuring 
-                    a perfect alignment between culture, skills, and vision. We don’t just fill roles—we curate long-term 
-                    success.
-                </p>
-
-                <!-- Leadership Overview -->
-                <h3>Meet Our Leadership</h3>
-                <p class="justified-text">
-                    At the heart of CTC is a leadership team with **over 20 years of experience** in staffing and recruitment. 
-                    Our executive chef has personally managed fine dining establishments, giving us **firsthand insight** into 
-                    the needs of the hospitality world.
-                </p>
-
-                <!-- High-Touch Service -->
+                                <!-- Leadership Overview -->
                 <div class="shadowbox-header">
-                    <h3>A High-Touch Approach</h3>
+                    <h1>Meet Our Leadership</h1>
                 </div>
-                <p class="justified-text" style="margin-bottom: 20px;">Unlike traditional staffing firms, we work **side by side** with each client, ensuring that hiring decisions 
-                    reflect not just skill, but also culture and vision. We understand the hospitality industry **inside and out**, 
-                    allowing us to place candidates who truly elevate your business.
+                <!-- Meredith's Profile -->
+                <div style="display: flex; align-items: center; gap: 20px; flex-direction: row; background: rgba(26, 62, 62, 0.1); padding: 20px; border-radius: 10px;">
+                    <img src="assets/Meredith_Image.jpg" alt="Meredith Lurty" style="width: 150px; height: auto; border-radius: 10px;">
+                <div>
+                        <h2 class="LP_Name" style="text-align: left;">
+                            Meredith Lurty
+                        </h2>
+                        <h3 class="LP_Title" style="text-align: left;">
+                            Co-Founder | Curated Talent Collective
+                        </h3>
+                    </div>
+                </div>
+                <p class="justified-text">
+                    With over 18 years of experience in consultative sales, strategic planning, and 
+                    delivery management, Meredith brings a proven track record of driving operational 
+                    excellence and building high-performing teams. As a Delivery Manager at Actalent, 
+                    she has successfully designed, implemented, and optimized client programs across 
+                    diverse industries, ensuring top-tier talent acquisition and organizational 
+                    efficiency.
                 </p>
+                <p class="justified-text">
+                    Prior to founding Curated Talent Collective, Meredith spent 15 years at Aerotek, 
+                    where she led strategic account management initiatives, negotiated high-value 
+                    contracts, and established long-term partnerships with global organizations. 
+                    Her expertise in client relationship management, workforce solutions, and 
+                    operational strategy has positioned her as a trusted advisor to executive 
+                    leadership teams.
+                </p>
+                <p class="justified-text">
+                    A Florida State University graduate with a BA in International Business and 
+                    Finance, she brings a data-driven, solutions-oriented approach to talent 
+                    acquisition. Her ability to align business goals with strategic workforce 
+                    planning ensures that clients not only find the right talent but also optimize 
+                    team performance and engagement.
+                </p>
+                <p class="justified-text">
+                    At Curated Talent Collective, Meredith is dedicated to transforming the 
+                    hospitality industry by connecting elite talent with world-class restaurants 
+                    and hospitality businesses. Her passion for building meaningful partnerships 
+                    and enhancing organizational performance drives her commitment to excellence 
+                    in every endeavor.
+                </p>
+
+                <!-- Gordon's Profile -->
+                <div style="display: flex; align-items: center; gap: 20px; flex-direction: row; background: rgba(26, 62, 62, 0.1); padding: 20px; border-radius: 10px;">
+                    <img src="assets/Gordon_Image.jpg" alt="Meredith Lurty" style="width: 150px; height: auto; border-radius: 10px;">
+                <div>
+                        <h2 class="LP_Name" style="text-align: left;">
+                            Gordon Waugh
+                        </h2>
+                        <h3 class="LP_Title" style="text-align: left;">
+                            Co-Founder | Curated Talent Collective
+                        </h3>
+                    </div>
+                </div>
+                <p class="justified-text">
+                    With nearly two decades of culinary leadership experience, Gordon is a seasoned 
+                    hospitality professional specializing in menu development, operations management, 
+                    and multi-unit leadership. His expertise in P&L forecasting, team training, and 
+                    strategic restaurant growth has made him an invaluable asset in the hospitality 
+                    and restaurant industry.
+                </p>
+                <p class="justified-text">
+                    Before joining Curated Talent Collective, he served as Corporate Chef for Red 
+                    Mesa Restaurant Group, where he oversaw menu engineering, cost control strategies, 
+                    and operational excellence across multiple locations. His ability to drive 
+                    profitability through innovative culinary programs and strategic decision-making 
+                    has consistently resulted in increased revenue and enhanced guest experiences.
+                </p>
+                <p class = "justified-text">
+                        His career spans leadership roles at nationally recognized brands, including:
+                </p>
+                <ul class="custom-list">
+                    <li>
+                        <strong>P.F. Chang’s China Bistro</strong> – Served as Executive Chef, overseeing 
+                        menu execution, financial performance, and operational efficiency.
+                    </li>
+                    <li>
+                        <strong>Cooper's Hawk Winery and Restaurants </strong> – Managed high-volume kitchen 
+                        operations, ensuring consistency and quality across locations.
+                    </li>
+                    <li>
+                        <strong>Doc B’s Fresh Kitchen </strong> – Led new restaurant openings, building 
+                        strong culinary teams and implementing streamlined kitchen workflows.
+                    </li>
+                </ul>
+                <p class="justified-text">
+                    A graduate of Guilford Technical Community College’s Culinary Arts Program Gordon 
+                    blends culinary expertise with strategic business acumen. His ability to develop 
+                    high-performing teams, optimize restaurant operations, and create innovative 
+                    dining experiences aligns perfectly with Curated Talent Collective’s mission to 
+                    elevate hospitality through world-class talent placement.
+                </p>
+                <p class="justified-text">
+                    At Curated Talent Collective, he plays a pivotal role in mentoring emerging 
+                    culinary leaders and helping top-tier hospitality brands find exceptional kitchen 
+                    professionals who bring creativity, leadership, and excellence to every plate.
+                </p>
+
             </div>
         </section>
         
