--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             </video>
             <div class="hero-content">
                 <h1>Welcome to the Curated Talent Collective</h1>
+                <h3>Hospitality-Focused Staffing and Consulting</h3>
             </div>
         </section>
         
